# leetcode-casually

./: CMakeLists.txt  README.md  tool.py
include/: common.hpp
tests/: CMakeLists.txt
tests/no119_pascals-triangle-ii/: solution.hpp  test.cpp
tests/no1550_three-consecutive-odds/: solution.hpp  test.cpp
tests/no2094_finding-3-digit-even-numbers/: solution.hpp  test.cpp
tests/no2109_adding-spaces-to-a-string/: solution.hpp  test.cpp
tests/no2140_solving-questions-with-brainpower/: solution.hpp  test.cpp
tests/no219_contains-duplicate-ii/: solution.hpp  test.cpp
tests/no2278_percentage-of-letter-in-string/: solution.hpp  test.cpp
tests/no2873_maximum-value-of-an-ordered-triplet-i/: solution.hpp  test.cpp
tests/no3170_lexicographically-minimum-string-after-removing-stars/: solution.hpp  test.cpp
tests/no344_reverse-string/: solution.hpp  test.cpp
tests/no350_intersection-of-two-arrays-ii/: solution.hpp  test.cpp
tests/no386_lexicographical-numbers/: solution.hpp  test.cpp
tests/no416_partition-equal-subset-sum/: solution.hpp  test.cpp
tests/no45_jump-game-ii/: solution.hpp  test.cpp
tests/no541_reverse-string-ii/: solution.hpp  test.cpp
tests/no598_range-addition-ii/: solution.hpp  test.cpp
tests/no680_valid-palindrome-ii/: solution.hpp  test.cpp
tests/no81_search-in-rotated-sorted-array-ii/: solution.hpp  test.cpp
tests/template/: solution.txt  test.txt
